# book-webapp-fastapi

./: .env  .flake8  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
openapi/specification/: book-webapp-fastapi_API-specification.yaml
specification/: book-webapp-fastapi_API-specification.yaml
src/book/: book.py  main.py  models.py
src/book/entity/: bookdata.yml
tools/: auth_patterns.http  rest.http
