[tool.poetry]
name = "book-webapp-fastapi"
version = "0.1.0"
description = ""
authors = ["Fujioka"]

[tool.poetry.dependencies]
python = "^3.9"
datamodel-code-generator = "^0.13.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
