[tool.poetry]
name = "book-webapp-fastapi"
version = "0.1.0"
description = ""
authors = ["Fujioka"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
fastapi-code-generator = "^0.3.5"
datamodel-code-generator = "0.11.19"
fastapi = "^0.79.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
